# causal-sidecar

./: .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml  fly-deploy.yml  release.yml
app/: __init__.py  data.py  estimators.py  main.py  schemas.py
data/: .gitkeep
tests/: test_api.py  test_estimators.py
