[tool.poetry]
name = "causal-sidecar"
version = "0.1.0"
description = "DoWhy/EconML/statsmodels sidecar for the AgeDefy causal-inference-agent"
authors = ["Kryst Investments LLC <platform@kryst-investments.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
pydantic = "^2.9"
numpy = "^2.1"
pandas = "^2.2"
scipy = "^1.14"
statsmodels = "^0.14"
dowhy = "^0.12"
econml = "^0.15"
networkx = "^3.3"
opentelemetry-api = "^1.27"
opentelemetry-sdk = "^1.27"
opentelemetry-instrumentation-fastapi = "^0.48b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "^0.27"
ruff = "^0.7"
mypy = "^1.13"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
